# best-backup

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  INSTALL.md  QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  config.yaml.example  project.yaml  pyproject.toml
.githooks/: commit-msg  pre-push
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release-notes.yml  stale.yml
bbackup/: __init__.py  archive.py  backup_runner.py  bbman.py  bbman_entry.py  cli.py  cli_metadata.py  config.py  docker_backup.py  encryption.py  manifest.py  remote.py  resources.py  restore.py  skills.py
bbackup/data/: __init__.py  cli-skills-index.json  cli-skills.md  config.yaml.example
bbackup/management/: dependencies.py  repo.py  setup_wizard.py  updater.py
docs/: PUBLISHING_CHECKLIST.md  README.md  VERSIONING.md  architecture.md  cli-skills.md  encryption.md  management.md
docs/assets/: README.md
docs/prompts/: bootstrap-planning-agent.md
scripts/: README.md  check_publishing_ready.py  check_version_sync.py  create_sandbox.py  generate_cli_skills.py  run_tests.py  smoke_installed_artifact.py
tests/: test_archive.py  test_backup_runner.py  test_cli.py  test_config.py  test_docker_backup.py  test_encryption.py  test_management.py  test_remote.py  test_restore.py
