[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbackup"
version = "1.7.0"
description = "Docker Backup Tool with Rich TUI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Slavic Kozyuk / Crux Experts LLC" },
]
keywords = [
  "docker",
  "backup",
  "containers",
  "volumes",
  "tui",
  "rsync",
  "encryption",
  "restore",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Archiving :: Backup",
]
dependencies = [
  "rich>=13.7.0",
  "pyyaml>=6.0.1",
  "docker>=7.0.0",
  "click>=8.1.7",
  "paramiko>=3.4.0",
  "cryptography>=41.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
management = [
  "gitpython>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/CruxExperts/best-backup"
Repository = "https://github.com/CruxExperts/best-backup"
Issues = "https://github.com/CruxExperts/best-backup/issues"

[project.scripts]
bbackup = "bbackup.cli:cli"
bbman = "bbackup.bbman_entry:cli"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.14",
  "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["bbackup*"]

[tool.setuptools.package-data]
"bbackup.data" = ["*.example", "*.md", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
  "integration: marks tests requiring a live Docker daemon (deselect with -m 'not integration')",
]

[tool.ruff]
target-version = "py312"
